from visual studio commit

--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 <body>
     <h1>My first commit</h1>
     <ul>
-        <li></li>
+        <li>red</li>
+        <li>orange</li>
+        <li>yellow</li>
+        <li>green</li>
+        <li>blue</li>
     </ul>
     <script src="./app.js"></script>
 </body>
