added a div class on html

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <li>green</li>
         <li>blue</li>
     </ul>
+    <div class="box">
+        this Box is Awesome
+    </div>
     <script src="./app.js"></script>
 </body>
 </html>
