--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <div class="box">
         this Box is Awesome
     </div>
+    <p><a href="https://github.com/chrispaulbacon"><button class="button1">My Github Profile</button></p></a>
     <script src="./app.js"></script>
 </body>
 </html>
