added username and password form

--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
 </head>
 <body>
     <h1>My first commit</h1>
+    <form action="hax.html" method="GET">
+        <div>
+            <label for="name">Username</label>
+            <input type="text" name="name" id="Username">
+        </div>
+        <div>
+            <label for="password">Password</label>
+            <input type="password" name="password">
+        </div>
+        <button class="button1">Submit</button>
+    </form>
     <ul>
         <li>red</li>
         <li>orange</li>
@@ -20,5 +31,6 @@
     </div>
     <p><a href="https://github.com/chrispaulbacon"><button class="button1">My Github Profile</button></p></a>
     <script src="./app.js"></script>
+    
 </body>
 </html>
