--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <label for="password">Password</label>
             <input type="password" name="password">
         </div>
-        <button class="button1">Submit</button>
+        <button type="submit" class="button1">Submit</button>
     </form>
     <ul>
         <li>red</li>
