renaming js file

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         this Box is Awesome
     </div>
     <p><a href="https://github.com/chrispaulbacon"><button class="button1">My Github Profile</button></p></a>
-    <script src="./app.js"></script>
+    <script src="./index.js"></script>
     
 </body>
 </html>
