--- a/hax.html
+++ b/hax.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <p><h1>So... here's your username and password. :)</h1></p>
     <div id="results"></div>
     <a href="/">Back to Form</a>
     <script>
