my first push using ccmd bash

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <h1>My first commit</h1>
-    <form action="hax.html" method="GET">
+    <h2>my first commit and push using bash CLI from md<h2>
+	<form action="hax.html" method="GET">
         <div>
             <label for="name">Username</label>
             <input type="text" name="name" id="Username">
