--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <h1>My first commit</h1>
-    <h2>my first commit and push using bash CLI from md<h2>
+    <h3>my second try on commiting and pushing using bash CLI from cmd<h3>
+	<h2>my first commit and push using bash CLI from md<h2>
 	<form action="hax.html" method="GET">
         <div>
             <label for="name">Username</label>
